--- a/ajnstajn.html
+++ b/ajnstajn.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<link rel="stylesheet" href="css/Astyle.css"/>
+<link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 <h1>Albert Ajnstajn</h1>
@@ -18,4 +18,5 @@ Albert Ajnstajn (1879-1955) bio je njemacki teorijski fizicar, tvorac specijalne
 
 <p id="citat">"Masta je vaznija od znanja."</p>
 </body>
+
 </html>
